@@ -68,13 +68,9 @@ gint pre_process(char *buf, CONNECTION_DATA *connection)
 	
 					/* prompt processing stuff */
 					case GA: /* Go ahead (prompt) */
-						*to++ = '\0';
-						len++;
 						break;
 	
 					case EOR: /* EOR (prompt) */
-						*to++ = '\0';
-						len++;
 						break;
 	
 					case SB: /* SB (subnegotiation) */
