@@ -19,7 +19,7 @@ GNOME-Mud 0.9.0 (UNRELEASED)
 - Fixed the MCCP segfault, hopefully.
 - Nested alias now works, with a maximum depth of 5.
 - Reconnect option on menu.
-- Translation updates (ca, es).
+- Translation updates (ca, es, sv).
 
 GNOME-Mud 0.8.0 (08/11/2001)
 
